syntax = "proto3";

package environment;

service Environment {
    rpc NewEnvironment(GeneralRequest) returns (GeneralResponse) {} // Init environment
}

/* BEGIN REQUESTS */

message GeneralRequest {
    string variableType = 1;

    string value = 2;

    string variableName = 3;

    bool replaceExisting = 4;

    string path = 5;
}

/* END REQUESTS */

/* BEGIN RESPONSES */

message GeneralResponse {
    string message = 1;
}

/* END RESPONSES */